# rw

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  changes.txt
.cargo/: config.toml
.github/workflows/: push.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
